logs/graf.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/graf'...
Listing './lib/python3.5/site-packages/graf/builtins'...
Listing './lib/python3.5/site-packages/graf/plugins'...
Compiling './lib/python3.5/site-packages/graf/plugins/__init__.py'...
***   File "./lib/python3.5/site-packages/graf/plugins/__init__.py", line 128
    print distrubution, error
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/graf/plugins/filters'...
Listing './lib/python3.5/site-packages/graf/plugins/loaders'...
Listing './lib/python3.5/site-packages/graf/plugins/parsers'...
Listing './lib/python3.5/site-packages/graf/styles'...
Listing './lib/python3.5/site-packages/graf/utils'...
Listing './lib/python3.5/site-packages/graf-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/natsort'...
Listing './lib/python3.5/site-packages/natsort/compat'...
Listing './lib/python3.5/site-packages/natsort-5.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
